--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Google Ad Redirect Extractor",
   "version": "1.0",
-  "description": "Opens a new tab with the adurl from googleadservices.com links.",
+  "description": "Opens a new tab with the adurl from googleadservices.com and ad.doubleclick.netlinks.",
   "permissions": [
     "webRequest", "tabs"
   ],
@@ -10,7 +10,8 @@
     "service_worker": "background.js"
   },
   "host_permissions": [
-    "*://*.googleadservices.com/*"
+    "*://*.googleadservices.com/*",
+    "*://ad.doubleclick.net/*"
   ],
   "action": {
     "default_title": "Ad Redirect Extractor"
